--- a/ShoothingTest.vcxproj.filters
+++ b/ShoothingTest.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\func.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\player01.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\player.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Test_Actiongame\ShootingTest\Test\bullet.cpp">
@@ -35,7 +41,10 @@
     <ClCompile Include="..\..\Test_Actiongame\ShootingTest\Test\main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="bullet_graphic.cpp">
+    <ClCompile Include="..\..\Test_Actiongame\ShootingTest\Test\Bullet_graphic.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Test_Actiongame\ShootingTest\Test\player01.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
