--- a/ShoothingTest.vcxproj.filters
+++ b/ShoothingTest.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\bullet.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\define.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
@@ -28,6 +25,12 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\player.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Test_Actiongame\ShootingTest\Test\front.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="source\bullet.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
@@ -45,6 +48,9 @@
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="..\..\Test_Actiongame\ShootingTest\Test\player01.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Test_Actiongame\ShootingTest\Test\front.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
